Refactor of to do list

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,9 @@
     <div class="header-title">TO DO LIST</div>
   </div>
   <div class="task__container">
-    <input class="task-input" id="js-task" type="text" name="task">
+      <label for="js-task">
+          <input class="task-input" id="js-task" type="text" name="task">
+      </label>
     <div class="task-add js-button">+</div>
     <div class="alert-empty">WRITE SOMETHING INSIDE</div>
     <div class="alert-full">IT'S TOO MUCH</div>
